--- a/2016-12-27/loop.html
+++ b/2016-12-27/loop.html
@@ -69,7 +69,9 @@
                 prop<=4294967294;
         }
         for(key in xishuArr){
-
+            if(arrayHasOwnIndex(arr,key)){
+                console.log(arr[key]);
+            }
         }
 
 
